--- a/frontend/src/components/layout/MainNav.module.css
+++ b/frontend/src/components/layout/MainNav.module.css
@@ -2,18 +2,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: white;
-  color: black;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  /*  */
+  background: #282c35;
   width: 100%;
   height: 5.5rem;
-  padding: 0 10%;
+  padding: 5% 10%;
 }
 
 .logo {
   font-weight: 900;
   font-size: 3rem;
+  transition: all 0.3s linear;
 }
 
 .logo a {
@@ -32,20 +30,42 @@
 }
 
 .header li {
-  margin-left: 1.5rem;
-  font-size: 1.5rem;
+  margin-left: 1.3rem;
+  margin-right: 1.3rem;
+  font-size: 1.3rem;
+  transition: all 0.3s linear;
 }
 
-/* ul ke bad -> li me margin left vs a me pading*/
 .header li a {
   text-decoration: none;
   padding: 0.8rem;
-  color: black;
+  color: #d2366f;
   font-weight: 700;
   border: 3px solid transparent;
-  border-radius: 9999px;
+}
+
+.header li:hover {
+  transform: scale(1.2);
 }
 
 .header li a:hover {
-  background-color: #d2dce7;
+  color: #fff;
+}
+
+.light {
+  background: white;
+}
+
+.toggleBtn {
+  margin-left: 1.3rem;
+  background: #d2366f;
+  color: white;
+  padding: 0.25rem 0.5rem;
+  border-radius: 5px;
+  border-color: transparent;
+  text-transform: capitalize;
+  transition: all 0.3s linear;
+  font-weight: bold;
+  letter-spacing: 2px;
+  cursor: pointer;
 }
