--- a/frontend/src/components/ui/Card.module.css
+++ b/frontend/src/components/ui/Card.module.css
@@ -1,5 +1,5 @@
 .card {
-  background-color: white;
+  color: #d2366f;
   border-radius: 6px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 10px;
 }
