--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,19 @@
-* {
-  box-sizing: border-box;
-  padding: 0;
+*,
+::after,
+::before {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  background: #d2dce7;
+  transition: all 0.3s linear;
+  background: #282c35;
+  color: #d2366f;
   line-height: 1.5;
   font-size: 0.875rem;
-  font-family: sofia-pro, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 h1,
@@ -33,4 +38,11 @@ h4 {
 }
 p {
   margin-bottom: 1.25rem;
+  font-size: medium;
+  letter-spacing: 1px;
+  padding: 5px;
+}
+
+button {
+  text-transform: capitalize;
 }
